--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <body>
       <div class="row min-vh-100 no-gutters">
          <header
-            class="col-12 col-lg-3 bg-dark text-light d-flex flex-column p-4 p-lg-3"
+            class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3"
          >
             <h1 class="text-center">Taskmaster Pro Edition</h1>
             <button
@@ -29,18 +29,18 @@
             <button id="remove-tasks" class="btn btn-block btn-danger">
                Delete All Tasks
             </button>
-            <p class="mt-auto">
+            <p class="mt-auto d-none d-lg-block">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
                voluptas architecto ipsa excepturi aut non laudantium sequi fugit
                officiis optio deleniti asperiores rem eius laborum maxime
                blanditiis culpa, quis iste?
             </p>
          </header>
-         <main class="col-12 col-lg-9">
+         <main class="col-12 col-lg-9 d-flex flex-column">
             <div class="m-5 row justify-content-around">
                <div class="col-12 col-md-6 col-xl-3 mb-3">
                   <div class="card">
-                     <h2 class="card-header">To Do</h2>
+                     <h2 class="card-header bg-dark text-light">To Do</h2>
                      <ul
                         id="list-toDo"
                         class="list-group list-group-flush"
@@ -50,7 +50,7 @@
 
                <div class="col-12 col-md-6 col-xl-3 mb-3">
                   <div class="card">
-                     <h2 class="card-header">In Progress</h2>
+                     <h2 class="card-header bg-dark text-light">In Progress</h2>
                      <ul
                         id="list-inProgress"
                         class="list-group list-group-flush"
@@ -67,7 +67,7 @@
                <!-- in review start -->
                <div class="col-12 col-md-6 col-xl-3 mb-3">
                   <div class="card">
-                     <h2 class="card-header">In Review</h2>
+                     <h2 class="card-header bg-dark text-light">In Review</h2>
                      <ul id="list-inReview" class="list-group list-group-flush">
                         <li class="list-group-item">
                            <span class="badge badge-primary badge-pill"
@@ -82,7 +82,7 @@
                <!-- done start -->
                <div class="col-12 col-md-6 col-xl-3 mb-3">
                   <div class="card">
-                     <h2 class="card-header">Done</h2>
+                     <h2 class="card-header bg-dark text-light">Done</h2>
                      <ul id="list-done" class="list-group list-group-flush">
                         <li class="list-group-item">
                            <span class="badge badge-primary badge-pill"
@@ -94,6 +94,11 @@
                   </div>
                </div>
                <!-- done end -->
+            </div>
+            <div id="trash">
+              <div class="w-100 bg-danger p-3 text-center text-light display-4 mt-auto">
+                Drop Here to Remove.
+              </div>
             </div>
          </main>
       </div>
